--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "solace.js",
-  "description": "An alternative to the package eris, a nodejs wrapper for interfacing with discord.",
+  "description": "An alternative to the package eris, a node.js wrapper for interfacing with the Discord API.",
   "version": "0.0.3",
   "main": "lib/index",
   "typings": "lib/index",
